[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Font/fun_sized_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Font/fun_sized_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scene/Script/Finish_screen.gd" type="Script" id=3]
[ext_resource path="res://Assets/etoile.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Finish_screen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 300
custom_constants/margin_bottom = 300

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer2"]
margin_left = 300.0
margin_top = 200.0
margin_right = 724.0
margin_bottom = 300.0
custom_constants/separation = 50
alignment = 1

[node name="Stars1" type="TextureRect" parent="PanelContainer/MarginContainer2/HBoxContainer"]
margin_left = 66.0
margin_right = 130.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="Stars2" type="TextureRect" parent="PanelContainer/MarginContainer2/HBoxContainer"]
margin_left = 180.0
margin_right = 244.0
margin_bottom = 100.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars3" type="TextureRect" parent="PanelContainer/MarginContainer2/HBoxContainer"]
margin_left = 294.0
margin_right = 358.0
margin_bottom = 100.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 250

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
text = "Finish !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 331.0
margin_right = 944.0
margin_bottom = 465.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 352.0
margin_right = 592.0
margin_bottom = 134.0
custom_constants/separation = 40

[node name="Next" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "NEXT LEVEL >"
flat = true

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 240.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "RETRY"
flat = true

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
